src/semantic/tests/data/positive/scope.hsh
function ()
  if true then
    let x = 2
    std.print(x)
  else
    let x = 1
    std.print(x)
  end
end
