src/semantic/tests/data/negative/invalid-assignment-1.hsh
function hello()
  let x
  foo().bar.baz[2].boo() = 2
end
